--- a/CashRegister2/Properties/Resources.resx
+++ b/CashRegister2/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="cookingIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Julie-Henriksen-Kitchen-Rotating-Stand-Mixer.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="printSound" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\printSound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
